Fri Aug 15 18:11:06 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (test_manfile): file is const.
	* src/check_mandirs.h (test_manfile): Update prototype.
	* src/mandb.c (update_one_file): filename is const.

Fri Aug 15 18:05:37 BST 2003  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in: Remove incorrect prototype of basename()
	  which was hiding several bugs.
	* configure.in: Check for <libgen.h>.
	* lib/pipeline.c, src/accessdb.c, src/catman.c, src/check_mandirs.c,
	  src/filenames.c, src/lexgrog.l, src/man.c, src/mandb.c,
	  src/manpath.c, src/straycats.c, src/whatis.c, zsoelim/zsoelim.l:
	  Include <libgen.h> instead of relying on basename() prototype in
	  manconfig.h.
	* src/check_mandirs.c (test_manfile), src/man.c (local_man_loop),
	  src/straycats.c (check_for_stray): Copy strings before calling
	  basename() on them.

Fri Aug 15 00:16:13 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/ult_src.c (ult_hardlink): Return a newly allocated string
	  rather than messily copying over an existing one (and possibly
	  corrupting the malloc arena). link and dir are now allocated
	  rather than being declared as arrays.
	  (ult_src): Update call to ult_hardlink(). Return 'const char *' to
	  make sure callers aren't messing about with our memory.
	* src/ult_src.h (ult_src): Update prototype.
	* src/check_mandirs.c (test_mandirs): ult is const.
	* src/lexgrog.l (main): file is const.
	* src/man.c (try_section): ult is const.
	  (display_filesystem, display_database): man_file is const.

Sat Aug  9 21:30:16 BST 2003  Colin Watson  <cjwatson@debian.org>

	* po/POTFILES.in: Add lib/pipeline.c, src/descriptions.c,
	  src/filenames.c, and src/globbing.c.
	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fr.po,
	  po/it.po, po/ja.po, po/pt_BR.po, po/sv.po: Update with msgmerge.

Sat Aug  9 18:28:01 BST 2003  Colin Watson  <cjwatson@debian.org>

	Replace the old "wait() for one child at a time" approach with a