@@ -1,3 +1,8 @@
+Sat Aug 16 14:07:46 BST 2003  Colin Watson  <cjwatson@debian.org>
+
+	* src/lexgrog.l (find_name): Report a sensible error if file is a
+	  directory.
+
 Fri Aug 15 18:11:06 BST 2003  Colin Watson  <cjwatson@debian.org>
 
 	* src/check_mandirs.c (test_manfile): file is const.
